--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -4,9 +4,8 @@
         <li class="nav"><a href="{{ "" | relURL }}">{{"Home"}}</a></li>
         <li class="nav"><a href="{{ "methodes" | relURL }}">{{"Methodes"}}</a></li>
         <li class="nav"><a href="{{ "recipes" | relURL }}">{{"Recipes"}}</a></li>
-
         <li class="nav"><a href="{{ "terms_of_use" | relURL }}">{{"Terms of Use"}}</a></li>
-        <li class="nav"><a href="{{ "privicy_policy" | relURL }}">{{"Privicy Policy"}}</a></li>
+        <li class="nav"><a href="{{ "privacy_policy" | relURL }}">{{"Privicy Policy"}}</a></li>
         <li class="nav"><a href="{{ "legal_notice" | relURL }}">{{"Legal Notice"}}</a></li>
     </ul>
 </nav>
