--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -2,8 +2,9 @@
     <a href="{{ "" | relURL }}"><img class="nav" src="{{ "images/3biochem_white.png" | relURL }}" alt="Logo"></a>
     <ul class="nav">
         <li class="nav"><a href="{{ "" | relURL }}">{{"Home"}}</a></li>
-        <li class="nav"><a href="{{ "methodes" | relURL }}">{{"Methodes"}}</a></li>
+        <li class="nav"><a href="{{ "materials" | relURL }}">{{"Materials"}}</a></li>
         <li class="nav"><a href="{{ "recipes" | relURL }}">{{"Recipes"}}</a></li>
+        <li class="nav"><a href="{{ "methodes" | relURL }}">{{"Methodes"}}</a></li>
         <li class="nav"><a href="{{ "templates" | relURL }}">{{"Templates"}}</a></li>
     </ul>
 </nav>
