--- a/public/templates/methodes/index.html
+++ b/public/templates/methodes/index.html
@@ -14,8 +14,9 @@
     <a href="/Laboratory/"><img class="nav" src="/Laboratory/images/3biochem_white.png" alt="Logo"></a>
     <ul class="nav">
         <li class="nav"><a href="/Laboratory/">Home</a></li>
-        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
+        <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
+        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
         <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
@@ -38,7 +39,8 @@
 
             
     
-        <div class="infobox info">
+        <!-- -->
+<div class="infobox info">
   <strong></strong>
   <div>⚠️ Info</div>
 </div>
