--- a/public/templates/recipes/index.html
+++ b/public/templates/recipes/index.html
@@ -14,8 +14,9 @@
     <a href="/Laboratory/"><img class="nav" src="/Laboratory/images/3biochem_white.png" alt="Logo"></a>
     <ul class="nav">
         <li class="nav"><a href="/Laboratory/">Home</a></li>
-        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
+        <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
+        <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
         <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
@@ -38,7 +39,8 @@
 
             
     
-        <h4 id="for-xx-ml">for xx mL</h4>
+        <!-- -->
+<h4 id="for-xx-ml">for xx mL</h4>
 <div class="infobox info">
   <strong></strong>
   <div>⚠️ Info</div>
@@ -64,7 +66,7 @@
   </thead>
   <tbody>
       <tr>
-          <td style="text-align: left">[Chemical <a href="https://www.carlroth.com/.../">Chemical <sup>SDB</sup></a>](<a href="https://www.carlroth.com/.../">https://www.carlroth.com/.../</a>)</td>
+          <td style="text-align: left"><a href="https://www.carlroth.com/.../">Chemical <sup>SDB</sup></a></td>
           <td style="text-align: left">g/mol</td>
           <td style="text-align: left"></td>
           <td style="text-align: left"> </td>
