new feature: access control

--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -14,6 +14,8 @@
 <script src="{{ "js/age_following_pcr_buffer.js" | relURL }}"></script>
 <script src="{{ "js/transformation_from_pcr_mastermix_prep_calc.js" | relURL }}"></script>
 
+<script src="{{ "js/access.js" | relURL }}"></script>
+
 <body>
 
     {{ partial "navigation" . }}
