--- a/layouts/shortcodes/transformation_from_pcr_enzyme_amount_select.html
+++ b/layouts/shortcodes/transformation_from_pcr_enzyme_amount_select.html
@@ -1,1 +1,1 @@
-Enzyme amount: <select id="ligation-enzyme-amount" style="width:80px;"><option value="1">1×</option><option value="2">2×</select>
+Number of enzymes: <select id="ligation-enzyme-amount" style="width:80px;"><option value="1">1×</option><option value="2">2×</select>
