--- a/public/templates/methodes/index.html
+++ b/public/templates/methodes/index.html
@@ -12,6 +12,9 @@
 <script src="/Laboratory/js/age_sample_prep_calc.js"></script>
 <script src="/Laboratory/js/pcr_mastermix_prep_calc.js"></script>
 <script src="/Laboratory/js/age_following_pcr_buffer.js"></script>
+<script src="/Laboratory/js/transformation_from_pcr_mastermix_prep_calc.js"></script>
+
+<script src="/Laboratory/js/access.js"></script>
 
 <body>
 
@@ -22,7 +25,6 @@
         <li class="nav"><a href="/Laboratory/materials">Materials</a></li>
         <li class="nav"><a href="/Laboratory/recipes">Recipes</a></li>
         <li class="nav"><a href="/Laboratory/methodes">Methodes</a></li>
-        <li class="nav"><a href="/Laboratory/templates">Templates</a></li>
     </ul>
 </nav>
 
@@ -45,6 +47,18 @@
             
     
         <!-- -->
+
+
+<div class="countdown-wrapper" data-time="0:00:30" data-sound="/Laboratory/sounds/timer-beep2.mp3">
+    <div class="countdown-row">
+        <div class="countdown-display">0:00:30</div>
+        <div class="countdown-bell" data-sound="on">🔔</div>
+    </div>
+    <button class="countdown-start">Start</button>
+    <button class="countdown-reset">Reset</button>
+</div>
+
+<script src="/Laboratory/js/timer.js"></script>
 <div class="infobox info">
   <strong></strong>
   <div>⚠️ Info</div>
