--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -16,6 +16,7 @@
 <script src="{{ "js/current_time_display.js" | relURL }}"></script>
 <script src="{{ "js/transformation_from_pcr_mastermix_prep_calc.js" | relURL }}"></script>
 <script src="{{ "js/transformation_buffer_10x_PIPES_alternative.js" | relURL }}"></script>
+<script src="{{ "js/primer_alternative.js" | relURL }}"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
