--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -9,5 +9,6 @@
         <li class="nav"><a href="{{ "materials" | relURL }}">{{"Materials"}}</a></li>
         <li class="nav"><a href="{{ "recipes" | relURL }}">{{"Recipes"}}</a></li>
         <li class="nav"><a href="{{ "methodes" | relURL }}">{{"Methodes"}}</a></li>
+        <li class="nav"><a href="{{ "workflows" | relURL }}">{{"Workflows"}}</a></li>
     </ul>
 </nav>
