--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -19,8 +19,13 @@
 <script src="{{ "js/primer_alternative.js" | relURL }}"></script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="{{ "js/comment_box.js" | relURL }}"></script>
+
+<script src="{{ "js/save_page.js" | relURL }}"></script>
+
+
 <script src="{{ "js/bacterial_growth_calc.js" | relURL }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script> <!-- save as excel-->
 
 <script src="{{ "js/access.js" | relURL }}"></script>
 
