new content: PBS, PBST, TBS, TBST, SDS-PAGE

--- a/public/templates/recipes/index.html
+++ b/public/templates/recipes/index.html
@@ -115,7 +115,7 @@ add class="calc_recipe_x"
 
 for masses add data-default-mass"e"
 for volumes add data-default-vol"e"
-for molarities add data-default-mol"e"
+for molarities add data-default-mol"e" //TODO: should be calculated automatically from molecular mass...
 
 e = value
 
